actaully fixed overflow issue

--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -2,6 +2,7 @@
     background-color: $secondary;
     color: $secondaryText;
     padding: 50px 0 75px;
+    overflow: hidden;
 
     h2 {
         font-size: 2rem;
