--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -1,6 +1,6 @@
 #contacts {
     margin: 50px;
-
+    overflow: hidden;
     .contactInfo {
         display: flex;
         justify-content: center;
